# CppTrainingMP

./: CMakeLists.txt  Readme.txt
include/: Integer.hpp  Number.hpp  RomanNumeral.hpp  StringNumber.hpp
source/: Integer.cpp  RomanNumeral.cpp  StringNumber.cpp  main.cpp
